correct school-image alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4053,11 +4053,12 @@ input, select, textarea {
 		align-items: center;
 		padding: 10px;
 		margin: 9px;
+		height: 275px;
+		width: 280px;
 	}
-
-	.education img {
-		max-width: 130px;
-		margin: 1rem;
+	.schooling > img {
+		height: 130px;
+		width: 130px;
 	}
 
 
